fixed ios gap issues

--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -18,7 +18,6 @@
     flex-direction: column;
     justify-content: flex-end;
     width: 100%;
-    gap: 20px;
     height: 60%;
 }
 
@@ -35,6 +34,7 @@
 .banner-info p {
     opacity: 0.8;
     font-size: 1rem;
+    margin-top: 20px;;
 }
 
 .order-btn {
@@ -77,7 +77,6 @@
 }
 
 @media (min-width: 1201px) {
-
     .banner-info h1 {
         font-size: 3rem;
     }
@@ -87,11 +86,11 @@
     }
     .banner {
         padding: 0 20%;
-        gap: 60px;
     }
 
     .order-btn {
         align-items: flex-start;
         width: 100%;
+        margin-top: 60px;
     }
 }
