--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,7 @@ a {
 
 .main {
     margin: 100px auto;
-    display: flex;
-    flex-direction: column;
-    gap: 80px;
+    display: grid;
+    grid-gap: 80px;
 }
 
